aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jle__tests__jle_lit.snap
---
source: aya-assembly/src/parser/instructions/jle.rs
expression: result
---
Instruction(
    JleLit(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 15,
                end: 19,
            },
        ),
    ),
)
