aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jle__tests__jle_lit_var.snap
---
source: aya-assembly/src/parser/instructions/jle.rs
expression: result
---
Instruction(
    JleLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        Var(
            ByteOffset {
                start: 15,
                end: 18,
            },
        ),
    ),
)
