aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jle__tests__jle_reg_expr.snap
---
source: aya-assembly/src/parser/instructions/jle.rs
expression: result
---
Instruction(
    JleReg(
        Address(
            BinaryOp {
                lhs: HexLiteral(
                    ByteOffset {
                        start: 7,
                        end: 11,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 14,
                        end: 16,
                    },
                ),
            },
        ),
        Register(
            ByteOffset {
                start: 19,
                end: 21,
            },
        ),
    ),
)
